2005-07-26  Carlos Garcia Campos  <carlosgc@gnome.org>

	* interfaces/buoh.glade: Remove Edit menu. Move Properties menuitem
	from Edit to Comic menu

2005-07-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* TODO: Updated

2005-07-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic.[ch]: Added
	* src/comic.[ch]: Removed
	* src/Makefile.am:
	* src/buoh-comic-list.c:
	* src/buoh-properties-dialog.[ch]:
	* src/buoh-view.[ch]:
	* src/buoh-window.c:
	* src/buoh.c:
	* src/comic-simple.[ch]:

	s/Comic/BuohComic/ 
	More code cleanup
	
2005-07-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* configure.in, src/Makefile.am: Cleanup

2005-07-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-add-comic-dialog.[ch]:
	* src/buoh-comic-list.[ch]:
	* src/buoh-properties-dialog.[ch]:
	* src/buoh-view.[ch]:
	* src/buoh-window.[ch]:
	* src/Makefile.am:

	New files added for the new design

	* interfaces/buoh.glade: Some UI changes needed for the new design.
	Some widgets are created now in the code.

	* src/buoh.[ch], src/comic.h, src/main.c: Change to an OO design. Many
	code cleanups and fix some memory leaks. 

2005-06-28  Esteban Sanchez  <esteban@steve-o.org>

	* buoh.c, buoh.h, callbacks.c, callbacks.h, comic.c, comic.h,
	comic-simple.c, comic-simple.h, main.c, ChangeLog: Change my email

2005-06-13  Esteban Sanchez  <esteban@steve-o.org>

	* data/comics.xml: "Pooch Cafe in Spanish" is now published on Sundays

2005-04-10  Esteban Sanchez  <esteban@steve-o.org>

	* src/comic-simple.c: (comic_simple_is_the_last): Now it check the
	restrictions of the comic

2005-04-07  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh.c: Some reorder of the code.
	(buoh_gui_copy_uri_to_clipboard): New function that copies the URI
	of the selected comic to the clipboard
	(buoh_gui_popup_copy_uri_cb): Implemented.
	(buoh_gui_popup_delete_cb): Implemented.

2005-03-11  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh.c: Change the notebook to the image only when the